--- a/index.html
+++ b/index.html
@@ -5,20 +5,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Aprendendo JS</title>
-    <Style>
-        body{
-          text-align: center;
-        }
-    </Style>
-    <link rel="stylesheet" href="/CSS/style.css";
+    <title>Login</title>
+    <link rel="stylesheet" href="/CSS/style.css" />
 </head>
 
 <body>
-    <h1>Aprendendo Javascript</h1>
-    <br>
-    <p id="subtitulo" >test etsetet</p>
-    <button onclick="alertahellou()">kkk</button>
+    <form>
+        <div>
+            <div><label>Email</label></div>
+            <input type="email" name="email" placeholder="seu@email.com" />
+        </div>
+        <div>
+            <div><label>Senha</label></div>
+            <input type="password" name="password" placeholder="Senha" />
+        </div>
+        <div>
+            <button type="button">Recuperar Senha</button>
+        </div>
+        <div>
+            <button type="button">Entrar</button>
+        </div>
+        <div>
+            <button type="button">Registrar</button>
+        </div>
+    </form>
     <script src="JS/Index.js">
     </script>
 </body>
