--- a/index.html
+++ b/index.html
@@ -10,32 +10,39 @@
     <link rel="stylesheet" href="/CSS/global.css" />
 </head>
 
-<body class="body centralize">
-    <form>
-        <div class="form-field">
-            <div><label>Email</label></div>
-            <input class="input" type="email" name="email" id="email" onchange="onChangeEmail()"
-                placeholder="seu@email.com" />
-            <div class="error" id="email-required">Email é obrigatório</div>
-            <div class="error" id="email-invalid">Email é Inválido</div>
-        </div>
-        <div class="form-field">
-            <div><label>Senha</label></div>
-            <input class="input" id="password" type="password" name="password" onchange="onChangePassword()"
-                placeholder="Senha" />
-            <div class="error" id="password-required">Senha é obrigatória</div>
-        </div>
-        <div>
-            <button type="button" id="recorevypassword" name="recorevypassword" class="clear" disabled="true">Recuperar
-                Senha</button>
-        </div>
-        <div>
-            <button type="button" id="loginbutton" name="loginbutton" class="solid" disabled="true">Entrar</button>
-        </div>
-        <div>
-            <button type="button" class="outline" onclick="registrar()">Registrar</button>
-        </div>
-    </form>
+
+<body>
+    <div class="topPagina">
+        <img src="/img/golzimLimpo.png" width="120 px">
+    </div>
+    <div class="body centralize">
+        <form>
+            <div class="form-field">
+                <div><label>Email</label></div>
+                <input class="input" type="email" name="email" id="email" onchange="onChangeEmail()"
+                    placeholder="seu@email.com" />
+                <div class="error" id="email-required">Email é obrigatório</div>
+                <div class="error" id="email-invalid">Email é Inválido</div>
+            </div>
+            <div class="form-field">
+                <div><label>Senha</label></div>
+                <input class="input" id="password" type="password" name="password" onchange="onChangePassword()"
+                    placeholder="Senha" />
+                <div class="error" id="password-required">Senha é obrigatória</div>
+            </div>
+            <div>
+                <button type="button" id="recorevypassword" name="recorevypassword" class="clear"
+                    disabled="true">Recuperar
+                    Senha</button>
+            </div>
+            <div>
+                <button type="button" id="loginbutton" name="loginbutton" class="solid" disabled="true">Entrar</button>
+            </div>
+            <div>
+                <button type="button" class="outline" onclick="registrar()">Registrar</button>
+            </div>
+        </form>
+    </div>
     <script src="/js/Index.js"></script>
     <script src="/js/validations.js"></script>
     <script src="/js/loading.js"></script>
@@ -45,14 +52,7 @@
         import { getDatabase } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-database.js";
         import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword, sendPasswordResetEmail } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-auth.js";
 
-        const firebaseConfig = {
-            apiKey: "AIzaSyA7yhvXrf-UWIZPnsCshJB-y4ynpCt5hpc",
-            authDomain: "login-golzim.firebaseapp.com",
-            projectId: "login-golzim",
-            storageBucket: "login-golzim.appspot.com",
-            messagingSenderId: "708545937045",
-            appId: "1:708545937045:web:721e937c92fc2182bd659c"
-        };
+
         const app = initializeApp(firebaseConfig);
         const database = getDatabase(app);
         const auth = getAuth();
@@ -92,7 +92,12 @@
                     // ..
                 });
         });
-
+        auth.onAuthStateChanged(function (user) {
+            if (user) {
+                console.log(user);
+                logar();
+            }
+        })
     </script>
 </body>
 
