--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -1,11 +1,51 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/CSS/global.css" />
+    <link rel="stylesheet" href="/CSS/home.css" />
 </head>
-<body>
-   <h1>Home</h1>  
+
+<body class="body">
+    <header>
+        <button type="button" name="btnSair" id="btnSair" class="clear">Sair</button>
+    </header>
+    <script src="/js/validations.js"></script>
+    <script type="module">
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-app.js";
+        import { getDatabase } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-database.js";
+        import { getAuth, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-auth.js";
+
+
+        const app = initializeApp(firebaseConfig);
+        const database = getDatabase(app);
+        const auth = getAuth();
+
+
+        btnSair.addEventListener('click', (e) => {
+            signOut(auth)
+                .then(() => {
+                    // Signed in 
+                    window.location.href = '../../../index.html';
+                    // ...
+                })
+                .catch((err) => {
+                    hideLoading();
+                    alert(err.message);
+                });
+
+        });
+
+        onAuthStateChanged(auth, (user) => {
+            if (!user) {
+                window.location.href = '../../../index.html';
+            };
+        });
+    </script>
 </body>
+
 </html>
