Ajustes pagina home

--- a/index.html
+++ b/index.html
@@ -5,18 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Login</title>
+    <title>Login Golzimbet</title>
+    <link rel="shortcut icon" href="/img/Goll.png">
     <link rel="stylesheet" href="/CSS/style.css" />
     <link rel="stylesheet" href="/CSS/global.css" />
 </head>
 
 
 <body>
-    <div class="topPagina">
-        <img src="/img/golzimLimpo.png" width="120 px">
-    </div>
+    <header class="topPagina">
+        <img src="/img/golzimLimpo.png" width="15%">
+    </header>
     <div class="body centralize">
         <form>
+            <div class="BemVindo">
+                <h3>Bem-Vindo(a)</h3>
+            </div>
             <div class="form-field">
                 <div><label>Email</label></div>
                 <input class="input" type="email" name="email" id="email" onchange="onChangeEmail()"
