Final para subir

--- a/pages/ResultadoFinal/ResultadoFinal.html
+++ b/pages/ResultadoFinal/ResultadoFinal.html
@@ -13,41 +13,52 @@
 </head>
 
 <body>
-  <div class="topPagina">Jogos do dia 10/03/2024 +0.5 Gol HT</div>
-  <div class="topPaginaPages">Premier League</div>
+  <div class="topPagina">Jogos do dia 10/03/2024 Favorito Vence</div>
+  <div class="topPaginaPages">Liga Portugal</div>
   <ul class="accordion-pages">
     <li>
-      <a href="https://fir3.net/6dpevS" target="_blank" style="text-decoration: none;">
+      <a href="https://fir3.net/X5WtC6wSm" target="_blank" style="text-decoration: none;">
+        <p class="divLeft">17:30</p>
+        <p class="divRight">Casa Vence</p>
         <div class="dropdownlink">
-          <p>Aston Villa x Tottenham
+          <p>Benfica x Estoril
           </p>
         </div>
       </a>
     </li>
   </ul>
+  <div class="topPaginaPages">Campeonato Italiano</div>
   <ul class="accordion-pages">
     <li>
-      <a href="https://fir3.net/gxD3d" target="_blank" style="text-decoration: none;">
+      <a href="https://fir3.net/t2Kbzs5Z" target="_blank" style="text-decoration: none;">
+        <p class="divLeft">11:00</p>
+        <p class="divRight">Casa Vence</p>
         <div class="dropdownlink">
-          <p>Brighton x Nottingham
+          <p>Milan x Empoli
           </p>
         </div>
       </a>
     </li>
   </ul>
+  <div class="topPaginaPages">Campeonato Francês</div>
   <ul class="accordion-pages">
     <li>
-      <a href="https://fir3.net/P8TXoXG0" target="_blank" style="text-decoration: none;">
+      <a href="https://fir3.net/lN3nld4hbB" target="_blank" style="text-decoration: none;">
+        <p class="divLeft">09:00</p>
+        <p class="divRight">Casa Vence</p>
         <div class="dropdownlink">
-          <p>West Ham x Burnley
+          <p>PSG x Reims
           </p>
         </div>
       </a>
     </li>
   </ul>
+  <div class="topPaginaPages">Bundesliga</div>
   <ul class="accordion-pages">
     <li>
-      <a href="https://fir3.net/jTQgNXH" target="_blank" style="text-decoration: none;">
+      <a href="https://fir3.net/xf0OrMnBaU" target="_blank" style="text-decoration: none;">
+        <p class="divLeft">15:30</p>
+        <p class="divRight">Casa Vence</p>
         <div class="dropdownlink">
           <p>Bayer Leverkus x Wolfsburg
           </p>
@@ -59,6 +70,8 @@
   <ul class="accordion-pages">
     <li>
       <a href="https://fir3.net/yEz4JH0" target="_blank" style="text-decoration: none;">
+        <p class="divLeft">14:30</p>
+        <p class="divRight">Casa Vence</p>
         <div class="dropdownlink">
           <p>Real Madrid x Celta de Vigo
           </p>
@@ -70,6 +83,8 @@
   <ul class="accordion-pages">
     <li>
       <a href="https://fir3.net/LtE8rdWa" target="_blank" style="text-decoration: none;">
+        <p class="divLeft">16:00</p>
+        <p class="divRight">Casa Vence</p>
         <div class="dropdownlink">
           <p>Goiás x Goiânia
           </p>
