--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="/CSS/global.css" />
     <link rel="stylesheet" href="/CSS/home.css" />
-    
+
 </head>
 
 <body>
@@ -22,32 +22,39 @@
         <h3>Confie e Ganhe!</h3>
     </div>
     <di class="textoHome">
-        <p>Aqui você encontra as melhores projeções de apostas elaboradas por inteligência artificial.</p>
+        <p>Aqui você encontra as melhores projeções de apostas para futebol.</p>
     </di>
 
     <ul class="accordion-menu">
         <li>
+            <p class="divRight">></p>
+            <div class="dropdownlink" onclick="acessarResultadoFinal()">Resutado Final
+            </div>
+
+        </li>
+        <li>
+            <p class="divRight">></p>
             <div class="dropdownlink" onclick="acessar1gol1tempo()"> 1-Gol 1º Tempo
             </div>
         </li>
         <li>
-            <div class="dropdownlink"> 2-Gols 1º Tempo
+            <p class="divRight">></p>
+            <div class="dropdownlink" onclick="acessar2gol1tempo()"> 2-Gols 1º Tempo
             </div>
         </li>
         <li>
-            <div class="dropdownlink">3-Gols 1º Tempo
+            <p class="divRight">></p>
+            <div class="dropdownlink" onclick="acessar3gol1tempo()">3-Gols 1º Tempo
             </div>
         </li>
         <li>
-            <div class="dropdownlink">2-Gols no Jogo (90 min)
+            <p class="divRight">></p>
+            <div class="dropdownlink" onclick="acessar2golsNoJogo()">2-Gols no Jogo (90 min)
             </div>
         </li>
         <li>
-            <div class="dropdownlink">3-Gols no Jogo (90 min)
-            </div>
-        </li>
-        <li>
-            <div class="dropdownlink">Resutado Final
+            <p class="divRight">></p>
+            <div class="dropdownlink" onclick="acessar3golsNoJogo()">3-Gols no Jogo (90 min)
             </div>
         </li>
     </ul>
