--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="body centralize">
         <form>
             <div class="BemVindo">
-                <h3>Bem-Vindo(a)</h3>
+                <h3>Entre e acesse as melhores tendências</h3>
             </div>
             <div class="form-field">
                 <div><label>Email</label></div>
