--- a/pages/2gol1tempo/2gol1tempo.html
+++ b/pages/2gol1tempo/2gol1tempo.html
@@ -65,7 +65,7 @@
         signOut(auth)
             .then(() => {
                 // Signed in 
-                window.location.href = '../../../index.html';
+                window.location.href = '../../../login.html';
                 // ...
             })
             .catch((err) => {
@@ -77,7 +77,7 @@
 
     onAuthStateChanged(auth, (user) => {
         if (!user) {
-            window.location.href = '../../../index.html';
+            window.location.href = '../../../login.html';
         };
     });
 </script>
