--- a/pages/3gol1tempo/3gol1tempo.html
+++ b/pages/3gol1tempo/3gol1tempo.html
@@ -62,7 +62,7 @@
         signOut(auth)
             .then(() => {
                 // Signed in 
-                window.location.href = '../../../index.html';
+                window.location.href = '../../../login.html';
                 // ...
             })
             .catch((err) => {
@@ -74,7 +74,7 @@
 
     onAuthStateChanged(auth, (user) => {
         if (!user) {
-            window.location.href = '../../../index.html';
+            window.location.href = '../../../login.html';
         };
     });
 </script>
